--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
 	"name": "root-website",
 	"version": "1.0.0",
 	"workspaces": [
-		"projects/*"
+		"docusaurus-discordjs-docgen",
+		"docusaurus-typedoc-json-parser"
 	],
 	"description": "Website with the Sapphire guide, hosted on https://sapphirejs.dev",
 	"author": "@sapphire",
 	"license": "MIT",
 	"private": true,
 	"scripts": {
+		"build-plugin": "tsc -b docusaurus-typedoc-json-parser",
 		"docusaurus": "docusaurus",
-		"start": "docusaurus start",
-		"build": "docusaurus build",
+		"start": "yarn build-plugin && docusaurus start",
+		"build": "yarn build-plugin && docusaurus build",
 		"swizzle": "docusaurus swizzle",
 		"deploy": "docusaurus deploy",
 		"clear": "docusaurus clear",
@@ -19,18 +21,15 @@
 		"write-translations": "docusaurus write-translations",
 		"write-heading-ids": "docusaurus write-heading-ids",
 		"typecheck": "tsc",
+		"update": "yarn upgrade-interactive",
 		"lint": "eslint src --ext mjs,ts --fix",
 		"lint:md": "markdownlint-cli2-fix",
 		"lint:md-no-fix": "markdownlint-cli2",
 		"clean": "node scripts/clean.mjs",
 		"format": "prettier --write \"{src,static,scripts,docs}/**/*.{js,jsx,ts,tsx,css,json,md,mdx,yml}\"",
 		"format:check": "prettier --check \"{src,static,scripts,docs}/**/*.{js,jsx,ts,tsx,css,json,md,mdx,yml}\"",
-		"update": "yarn upgrade-interactive",
 		"postinstall": "husky install .github/husky",
-		"clean-projects": "rimraf \"./projects/**/node_modules\" \"./projects/**/dist\" \"./projects/**/build\" \"./projects/**/prebuild\"",
-		"vercel-build": "yarn make-djs-node-14-compatible && yarn build",
-		"update-submodules": "git pull --recurse-submodules && git submodule update --remote --recursive",
-		"make-djs-node-14-compatible": "node scripts/make-djs-node-14-compatible.mjs"
+		"vercel-build": "yarn build"
 	},
 	"dependencies": {
 		"@docusaurus/core": "2.1.0",
@@ -53,15 +52,8 @@
 		"@commitlint/cli": "^17.1.2",
 		"@commitlint/config-conventional": "^17.1.0",
 		"@docusaurus/module-type-aliases": "2.1.0",
-		"@sapphire/cron": "^1.0.0",
-		"@sapphire/decorators": "^5.0.0",
-		"@sapphire/duration": "^1.0.0",
 		"@sapphire/eslint-config": "^4.3.8",
-		"@sapphire/fetch": "^2.4.1",
 		"@sapphire/prettier-config": "^1.4.4",
-		"@sapphire/result": "^2.6.0",
-		"@sapphire/timer-manager": "^1.0.0",
-		"@sapphire/timestamp": "^1.0.0",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/node": "^18.11.3",
 		"@types/react": "^18.0.21",
@@ -69,7 +61,6 @@
 		"@typescript-eslint/eslint-plugin": "^5.40.1",
 		"@typescript-eslint/parser": "^5.40.1",
 		"cz-conventional-changelog": "^3.3.0",
-		"docusaurus-plugin-typedoc": "^0.17.5",
 		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
@@ -83,21 +74,12 @@
 		"markdownlint-cli2": "^0.5.1",
 		"prettier": "^2.7.1",
 		"pretty-quick": "^3.1.3",
-		"replace-in-file": "^6.3.5",
-		"rimraf": "^3.0.2",
-		"ts-node": "^10.9.1",
-		"typedoc": "0.22.18",
-		"typedoc-plugin-djs-links": "^1.2.0",
-		"typedoc-plugin-markdown": "^3.13.6",
-		"typedoc-plugin-mdn-links": "^2.0.0",
 		"typescript": "^4.8.4"
 	},
 	"resolutions": {
 		"ansi-regex": "^5.0.1",
 		"minimist": "^1.2.7",
-		"async": "^2.6.4",
-		"typedoc": "0.22.17",
-		"discord-api-types": "^0.36.3"
+		"async": "^2.6.4"
 	},
 	"browserslist": {
 		"production": [
