--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,16 @@
 {
 	"extends": "./tsconfig.json",
-	"include": ["babel.config.js", "docs/General", "docs/Guide", "docusaurus.config.js", "projects", "scripts", "sidebars.js", "src", "static"]
+	"include": [
+		"babel.config.js",
+		"docs/General",
+		"docs/Guide",
+		"docusaurus.config.js",
+		"projects",
+		"scripts",
+		"sidebars.js",
+		"src",
+		"static",
+		"docusaurus-discordjs-docgen",
+		"docusaurus-typedoc-json-parser"
+	]
 }
