--- a/.eslintignore
+++ b/.eslintignore
@@ -1,13 +1,9 @@
 # Node modules
 node_modules/
 
-# Submodules
-projects/
-
 # Generated data
 docs/Documentation/
 .docusaurus/
+docusaurus-typedoc-json-parser/dist/
 
 src/index.d.ts
-
-docs/Guide/code/
