--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,7 @@
 # Node modules
 node_modules/
 
-# Submodules
-projects/
-
 # Generated data
 docs/Documentation/
 .docusaurus/
+docusaurus-typedoc-json-parser/dist/
