--- a/.eslintignore
+++ b/.eslintignore
@@ -4,6 +4,6 @@ node_modules/
 # Generated data
 docs/Documentation/
 .docusaurus/
-docusaurus-typedoc-json-parser/dist/
+json-parser/dist/
 
 src/index.d.ts
