--- a/json-parser/package.json
+++ b/json-parser/package.json
@@ -1,19 +1,18 @@
 {
-	"name": "docusaurus-typedoc-json-parser",
+	"name": "json-parser",
 	"version": "0.0.1",
-	"description": "A Docusaurus v2 plugin to build API Documentation based on typedoc-json-parser output.",
-	"main": "dist/index.js",
+	"description": "Parses API documentation from typedoc-json-parser to markdown files for Docusaurus.",
+	"type": "module",
+	"main": "dist/cli.mjs",
 	"files": [
 		"dist/"
 	],
 	"scripts": {
-		"build": "tsc",
-		"watch": "tsc -w",
+		"build": "tsup",
 		"debug": "node --inspect scripts/debug.mjs",
-		"start": "node scripts/debug.mjs"
+		"start": "node dist/cli.mjs"
 	},
 	"dependencies": {
-		"@sapphire/docusaurus-plugin-ts2esm2cjs": "^1.1.3",
 		"@sapphire/fetch": "^2.4.1",
 		"@sapphire/result": "^2.6.0",
 		"@sapphire/utilities": "^3.11.0",
@@ -25,6 +24,8 @@
 		"@docusaurus/types": "^2.1.0",
 		"@types/common-tags": "^1.8.1",
 		"dotenv": "^16.0.3",
+		"esbuild-plugin-file-path-extensions": "^1.0.0",
+		"tsup": "^6.3.0",
 		"typescript": "^4.8.4"
 	}
 }
