--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
 	"version": "1.0.0",
 	"workspaces": [
 		"docusaurus-discordjs-docgen",
-		"docusaurus-typedoc-json-parser"
+		"json-parser"
 	],
 	"description": "Website with the Sapphire guide, hosted on https://sapphirejs.dev",
 	"author": "@sapphire",
 	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"build-plugin": "tsc -b docusaurus-typedoc-json-parser",
-		"debug-plugin": "node scripts/debug.mjs",
+		"build-parser": "yarn workspace json-parser run build",
+		"run-parser": "yarn workspace json-parser run start",
 		"docusaurus": "docusaurus",
-		"start": "yarn build-plugin && docusaurus start",
-		"build": "yarn build-plugin && docusaurus build",
+		"start": "yarn build-parser && yarn run-parser && docusaurus start",
+		"build": "yarn build-parser && yarn run-parser && docusaurus build",
 		"swizzle": "docusaurus swizzle",
 		"deploy": "docusaurus deploy",
 		"clear": "docusaurus clear",
 		"serve": "docusaurus serve",
 		"write-translations": "docusaurus write-translations",
 		"write-heading-ids": "docusaurus write-heading-ids",
-		"typecheck": "tsc",
+		"typecheck": "tsc -p tsconfig.eslint.json",
 		"update": "yarn upgrade-interactive",
 		"lint": "eslint src --ext mjs,ts --fix",
 		"lint:md": "markdownlint-cli2-fix",
