--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,10 @@
 {
 	"extends": "./tsconfig.json",
+	"compilerOptions": {
+		"lib": ["ESNext", "DOM"],
+		"target": "ESNext",
+		"module": "ESNext",
+		"incremental": false
+	},
 	"include": ["babel.config.js", "docs/General", "docs/Guide", "docusaurus.config.js", "scripts", "sidebars.js", "src", "static", "json-parser"]
 }
