--- a/json-parser/package.json
+++ b/json-parser/package.json
@@ -16,6 +16,7 @@
 		"@sapphire/fetch": "^2.4.1",
 		"@sapphire/result": "^2.6.0",
 		"@sapphire/utilities": "^3.11.0",
+		"colorette": "^2.0.19",
 		"common-tags": "^1.8.2",
 		"css": "^3.0.0",
 		"typedoc-json-parser": "^6.0.2"
